--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Babylon from "../lib/Babylon.svelte";
 ---
 
 <html lang="en">
@@ -11,6 +11,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Babylon client:only />
 	</body>
 </html>
